# HyInfluenceMin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: eigenvec_centrality.cpp  hygraph.hpp  influence_estimator.hpp  livepath_estimator.hpp  montecarlo.hpp  rstrrpath_estimator.hpp  wtime.hpp
script/: cluster-vsRand.sh  cluster.sh
src/: main.cpp
src/tools/: DataConverter.py  data_cleaner.cpp  regular_checkin_filter.cpp
